# streamlined-dev-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: pull_request_template.md
docs/: COMMIT_CONVENTION.md  DEVELOPMENT.md  README.md
docs/tools/accessibility/: lighthouse.md
examples/accessibility/: lighthouse_example.py  test_clipboard.py
scripts/: lint_and_test.sh  setup_global.sh
src/: __init__.py
src/tools/: __init__.py
src/tools/accessibility/: __init__.py
src/tools/accessibility/axe/: .gitignore  README.md  __init__.py  axe_audit.py  run_axe.sh
src/tools/accessibility/html_validator/: README.md  validate.py  validate.sh
src/tools/accessibility/lighthouse/: .gitignore  README.md  __init__.py  debug_launcher.bat  debug_launcher.sh  get_active_url.py  lighthouse_audit.py  run_lighthouse.sh
